--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*{
+  margin: 0;
+}
 #pageHeader{
 	background-color: #2a353d;
 	margin: 0;
@@ -8,5 +11,7 @@
 	background-color: #2a353d;
 	color: #fff;
 	border-radius: 0;
-	margin-bottom: : 0px;
+	margin-bottom: 0px;
+  margin-top: 30px;
+  height: 50px;
 }
