--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 	background-color: #2a353d;
 	margin: 0;
 	border-radius: 0;
+	font-family: 'Montserrat', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .footer {
@@ -12,6 +14,9 @@
 	color: #fff;
 	border-radius: 0;
 	margin-bottom: 0px;
-  margin-top: 30px;
-  height: 50px;
+  	margin-top: 30px;
+  	height: 50px;
+  	/*font-family: 'Montserrat', sans-serif;*/
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
 }
