--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 *{
   margin: 0;
 }
-#pageHeader{
-	background-color: #2a353d;
-	margin: 0;
-	border-radius: 0;
-	font-family: 'Montserrat', sans-serif;
-	font-family: 'Open Sans', sans-serif;
+
+
+img {
+	margin bottom: 5px;
+	height: 35px;
+	width: 33px;
 }
 
 .footer {
