--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,27 @@
 	background-color: #2a353d;
 }
 
-..nav.navbar-nav>li>a {
-     color: #fff !important; 
- }
-#logo{
+.navbar>.container-fluid .navbar-brand {
+	font-size: 23px;
+}
+
+.navbar-brand {
+	color: #fff !important;
+    font-family: 'Montserrat', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+}
+
+.nav.navbar-nav.navbar-left>li>a {
+    color: #fff !important;
+    font-family: 'Montserrat', sans-serif;
+	font-family: 'Open Sans', sans-serif; 
+}
+
+.nav.navbar-nav.navbar-right>li>a {
+    color: #fff !important; 
+}
+
+#logo {
 	margin: 0%;	
 	padding-top: 1.5%;
 }
