--- a/css/style.css
+++ b/css/style.css
@@ -157,9 +157,9 @@ img {
 	float: left;
 	height: 36px;
 	line-height: 36px;
-	margin: 0 8px 0 0;
+	margin: 0 4% 0 0;
 	padding: 0;
-	text-align: center;
+	text-align: right;
 	width: 36px;
 	transition: all 0.5s ease 0s;
 	-moz-transition: all 0.5s ease 0s;
@@ -175,7 +175,7 @@ img {
 	-o-transform: scale(1.1) rotate(360deg);
 }
 .social li a {
-	color: red;
+	color: #f34213;
 }
 .social li:hover {
 	border: 2px solid #2c3e50;
