--- a/css/style.css
+++ b/css/style.css
@@ -37,36 +37,29 @@ a {
 	font-weight: 200;
 }	
 /*End Navbar*/
+/*---------------------------------------------*/
 
 /*Jumbo*/
-.jumbotron {
+.jumbotron-fluid {
 	text-align-last: center;
-    
-}
-/*.jumbotron-fluid*/ .container{
-	height: 430px;
-	background-size: cover;
-}
-
-h1 {
-	font-weight: 100 !important
+    max-height: 100%;
+    width: 100%;
 }
 
 .display-4 {
 	font-size: 9.5rem !important
-	font-weight: 100 !important	
 }
 
 .lead {
-    font-size: 4.2rem !important
-    font-weight: 200 !important
-    padding: 4%;
+	padding: 0;
+	font-size: 4.0rem !important
 }
+/*End Jumbo*/
+/*---------------------------------------------*/
 
-p {
-    margin-top: -21px !important
-    margin-bottom: 1rem !important
-}
+/*About Us*/
+
+/*End About Us*/
 
 /* .footer {
 	background-color: #2a353d;
