footer icons are added

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ a {
 /*Jumbo*/
 .jumbotron {
     margin-bottom: 0px;
-    background-image: url(../images/crypto.jpg);
+    background-image: url(../images/back1.jpg);
     background-position: 0% 25%;
     background-size: cover;
     background-repeat: no-repeat;
