--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ a {
 	line-height: 36px;
 	margin: 0 4% 0 0;
 	padding: 0;
-	text-align: right;
+	text-align: center;
 	width: 36px;
 	transition: all 0.5s ease 0s;
 	-moz-transition: all 0.5s ease 0s;
