--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,8 @@ a {
 .footer {
 	background: #2a353d;
 	height: auto;
-	padding-bottom: 30px;
+	padding-bottom: 2%;
+	padding-top: 2%;
 	position: relative;
 	width: 100%;
 	border-bottom: 1px solid #CCCCCC;
