--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,10 @@ a {
 	font-size: 15px;
 }
 
+.ion-android-mail {
+	font-style: initial;
+}
+
 .supportLi h4 {
 	font-size: 20px;
 	font-weight: lighter;
