--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ a {
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
+    height:100vh;
     /* opacity : 0.4; */
     text-shadow: black 0.2em 0.2em 0.2em;
 }
