--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,16 @@ background-color: #fff; }
 /*---------------------------------------------*/
 
 /*Contact*/
+.container-fluid {
+	font-family: 'Montserrat', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+}
+
+h2{
+	text-align: center;
+	padding-top: 2%;
+}
+
 /*End Contact*/
 /*---------------------------------------------*/
 
