--- a/css/style.css
+++ b/css/style.css
@@ -145,9 +145,11 @@ background-color: #fff; }
 .h2, h2 {
     font-size: 2.5rem !important;
 	text-align: center;
-	padding-top: 2%;
+	padding-top: 4%;
+	padding-bottom: 2%;
 	color: #2a353d !important;
 }
+
 
 /*End Contact*/
 /*---------------------------------------------*/
