--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ div.modal div.modal-backdrop {
 
 .justify-content-center {
 	width: 100%;
+	margin-left:  0%;
 }
 
 .about .hero {
@@ -140,6 +141,7 @@ div.modal div.modal-backdrop {
 /*---------------------------------------------*/
 
 /*Packages & Pricing*/
+
 
 /*End Packages & Pricing*/
 /*---------------------------------------------*/
