--- a/css/style.css
+++ b/css/style.css
@@ -51,14 +51,14 @@ a {
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
-    /* height:100vh; */
+    height:100vh; 
     /* opacity : 0.4; */
     text-shadow: black 0.2em 0.3em 0.3em;
 }
 
 .jumbotron-fluid {
 	text-align-last: center;
-    /* max-height: 200%; */
+    max-height: 200%; 
     width: 100%;
 }
 
@@ -92,7 +92,8 @@ div.modal div.modal-backdrop {
 	font-family: 'Montserrat', sans-serif;
 	font-family: 'Open Sans', sans-serif;
 	background-color: #fff;
-  margin-top: 50px;
+    margin-top: 5%;
+    padding-top: 5%;
 }
 
 .justify-content-center {
@@ -196,15 +197,39 @@ div.modal div.modal-backdrop {
 	font-family: 'Montserrat', sans-serif;
 	font-family: 'Open Sans', sans-serif;
 	background-color: #fff;
-  margin-top: 800px;
+	margin-top: 5%;
+    padding-top: 5%;
+}
+
+.justify-content-center {
+	width: 100%;
+	margin-left:  0%;
+	margin-right: 0%;
+	margin-bottom: 4%;
+	margin-top: 4%;
 }
 /*End Services*/
 /*---------------------------------------------*/
 
 /*Packages & Pricing*/
 
+.card-header:first-child {
+	margin-left: 2.5%;
+	font-family: 'Montserrat', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+	background-color: #fff;
+	margin-top: 2%;
+    padding-top: 5%;
+}
 
-/*End Packages & Pricing*/
+.h3, h3 {
+    font-size: 2.5rem !important;
+	text-align: center;
+	padding-top: 1%;
+	padding-bottom: 2%;
+	color: #2a353d !important;
+}
+/*End Packages & Pricing*
 /*---------------------------------------------*/
 
 /*Contact*/
@@ -220,7 +245,15 @@ div.modal div.modal-backdrop {
 	padding-bottom: 2%;
 	color: #2a353d !important;
 }
+.form-groups{
 
+/*height: 25px !important;*/
+
+width: 66.4% !important;
+margin-left: 16.8%;
+font-size: 14px !important;
+
+}
 
 /*End Contact*/
 /*---------------------------------------------*/
