--- a/css/style.css
+++ b/css/style.css
@@ -46,19 +46,19 @@ a {
 /*Jumbo*/
 .jumbotron {
     margin-bottom: 0px;
-    background-image: url(../images/back1.jpg);
+    background-image: url(../images/unsplash.jpg);
     background-position: 0% 25%;
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
-    height:100vh; 
+    height:100vh;
     /* opacity : 0.4; */
     text-shadow: black 0.2em 0.3em 0.3em;
 }
 
 .jumbotron-fluid {
 	text-align-last: center;
-    max-height: 200%; 
+    max-height: 200%;
     width: 100%;
 }
 
@@ -110,17 +110,17 @@ div.modal div.modal-backdrop {
 
 .about .hero {
   padding-left: 0%; }
-  
+
 	.about .hero .info h4 {
       font-size: 2rem; }
     .about .hero .info h6 {
       font-size: 1.1rem;
       letter-spacing: 1px; }
-      
+
 .about .photo {
   padding: 0%;
   position: relative;
-  border-radius: 2px; 
+  border-radius: 2px;
 }
 
   .about .photo img {
