--- a/css/style.css
+++ b/css/style.css
@@ -224,6 +224,7 @@ div.modal div.modal-backdrop {
 	background-color: #fff;
 	margin-top: 2%;
     padding-top: 5%;
+
 }
 
 .h3, h3 {
@@ -236,7 +237,9 @@ div.modal div.modal-backdrop {
 
 .card-img-top{
 	height: 200px;
-
+}
+img{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 /*End Packages & Pricing*
 /*---------------------------------------------*/
