router is properly working

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -86,11 +86,17 @@
                     </ul>
 
                         <!-- Left side -->
-                        <a class="nav-link" href="#" >
+                        <!-- <a class="nav-link" href="#" >
                           <i class="icon ion-ios-cart" id="icon"></i></a>
-                            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" href="/users/signup">
                             <i class="icon ion-person" id="icon"></i>
-                            </a>
+                            </a> -->
+                  <li class="nav-item">
+                      <a class="nav-link" href="/users/login">Login</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/users/signup">Signup</a>
+                  </li>
               </div>
             </nav>
             <!-- End Navbar -->
