--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,1 +1,10 @@
-Main Layout
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Crypto-Consultz</title>
+  </head>
+  <body>
+     {{{body}}}
+  </body>
+</html>
