--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,12 @@
-Login
+<h2 class = "page-header">Account Login</h2>
+<form method="post" action="/users/login">
+  <div class="form-group">
+    <lable>Username</label>
+      <input type="text" class="form-control" placeholder="Username">
+    </div>
+    <div class="form-group">
+      <lable>Password</label>
+        <input type="password" class="form-control" placeholder="password">
+    </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+</form>
