--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,1 +1,33 @@
-Signup 
+<form method="post" action="/register">
+    <div class="form-group">
+        <p>Name</p>
+        <input type="text" class="form-control" placeholder="name" name="name">
+    </div>
+    <div class="form-group">
+        <p>Username</p>
+        <input type="text" class="form-control" placeholder="Username" name="username">
+    </div>
+    <div class="form-group">
+        <p>Email</p>
+        <input type="email" class="form-control" placeholder="Email" name="email">
+    </div>
+    <div class="form-group">
+        <p>Password</p>
+        <input type="password" class="form-control" placeholder="Password" name="password">
+    </div>
+    <div class="form-group">
+        <p>Confirm Password</p>
+        <input type="password" class="form-control" placeholder="Password" name="password2">
+    </div>
+    <div class="form-group">
+        <p>Register as...</p>
+        <input name="access" value=false type="radio" id="false" />
+        <label for="false">Player</label>
+        <input name="access" value=true type="radio" id="true" />
+        <label for="true">Establishment</label>
+    </div>
+    </div>
+    <div class="center container">
+        <button type="submit" class="btn btn-default hoverable">Submit</button>
+    </div>
+</form>
