--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,1 +1,35 @@
-Signup 
+<h1>Or Signup!</h1>
+<form role="form" method="POST" action="/users/signup">
+    <input type="hidden" name="_token" value="">
+    <div class="form-group">
+        <label class="control-label">Username</label>
+        <div>
+            <input type="text" class="form-control input-lg" name="name" value="">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label">E-Mail Address</label>
+        <div>
+            <input type="email" class="form-control input-lg" name="email" value="">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label">Password</label>
+        <div>
+            <input type="password" class="form-control input-lg" name="password">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label">Confirm Password</label>
+        <div>
+            <input type="password" class="form-control input-lg" name="password_confirmation">
+        </div>
+    </div>
+    <div class="form-group">
+        <div>
+            <button type="submit" class="btn btn-success">
+                Register
+            </button>
+        </div>
+    </div>
+</form>
