--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,26 +1,4 @@
-
-        <!-- Modal -->
-        <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                ...
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- Modal HTML Markup -->
+  <!-- Modal HTML Markup -->
 <div id="ModalLoginForm" class="modal fade">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -105,58 +83,58 @@
 </div><!-- /.modal -->
 
         <!-- <section class="at-login-form"> -->
-				<!-- MODAL LOGIN -->
-				<!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-					<div class="modal-dialog" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-							</div>
-							<div class="modal-body">
-								<button class="btn-fb"> <i class="fa fa-fw fa-facebook pull-left" aria-hidden="true"></i>
-									Login with Facebook	</button> <br>
-									<button class="btn-gp"> <i class="fa fa-fw fa-google-plus pull-left" aria-hidden="true"></i>
-										Login with Google	</button> <br>
-										<div class="signup-or-separator">
-											<span class="h6 signup-or-separator--text">or</span>
-											<hr>
-										</div>
-										<form>
-											<div class="form-group">
-												<input type="email" class="form-control-form " id="exampleInputEmaillog" placeholder="Email">
-											</div>
-											<div class="form-group">
-												<input type="password" class="form-control-form " id="exampleInputPasswordpas" placeholder="Password">
-											</div>
-											<div class="row">
-												<div class="col-md-6">
-													<div class="checkbox">
-														<label>
-															<input type="checkbox"> Remember me
-														</label>
-													</div>
-												</div>
-												<div class="col-md-4 col-md-offset-2">
-													<p class="frgt-pswd"   data-toggle="modal" data-dismiss="modal"  data-target="#at-reset-pswd">	Forgot Password ?</p>
-												</div>
-											</div>
-											<button type="submit" class="btn-lgin">Login</button>
-										</form>
-									</div>
-									<div class="modal-footer">
-										<div class="row">
-											<div class="col-md-6">
-												<p class="ta-l">Don't have an account ? </p>
-											</div>
-											<div class="col-md-4 col-md-offset-2">
-												<button class="btn-gst"  data-toggle="modal"  data-dismiss="modal" data-target="#at-signup" >Sign Up </button>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div> -->
-						<!-- MODAL LOGIN ENDS -->
+        <!-- MODAL LOGIN -->
+        <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+              </div>
+              <div class="modal-body">
+                <button class="btn-fb"> <i class="fa fa-fw fa-facebook pull-left" aria-hidden="true"></i>
+                  Login with Facebook </button> <br>
+                  <button class="btn-gp"> <i class="fa fa-fw fa-google-plus pull-left" aria-hidden="true"></i>
+                    Login with Google </button> <br>
+                    <div class="signup-or-separator">
+                      <span class="h6 signup-or-separator text">or</span>
+                      <hr>
+                    </div>
+                    <form>
+                      <div class="form-group">
+                        <input type="email" class="form-control-form " id="exampleInputEmaillog" placeholder="Email">
+                      </div>
+                      <div class="form-group">
+                        <input type="password" class="form-control-form " id="exampleInputPasswordpas" placeholder="Password">
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6">
+                          <div class="checkbox">
+                            <label>
+                              <input type="checkbox"> Remember me
+                            </label>
+                          </div>
+                        </div>
+                        <div class="col-md-4 col-md-offset-2">
+                          <p class="frgt-pswd"   data-toggle="modal" data-dismiss="modal"  data-target="#at-reset-pswd">  Forgot Password ?</p>
+                        </div>
+                      </div>
+                      <button type="submit" class="btn-lgin">Login</button>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <p class="ta-l">Don't have an account ? </p>
+                      </div>
+                      <div class="col-md-4 col-md-offset-2">
+                        <button class="btn-gst"  data-toggle="modal"  data-dismiss="modal" data-target="#at-signup" >Sign Up </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div> -->
+            <!-- MODAL LOGIN ENDS -->
       <!-- Start  Loading Section -->
       <div class="loading-overlay">
           <div class="spinner">
@@ -481,7 +459,7 @@
                       <p class="pull-center"> Copyright © CryptoConsultz, LLC 2018 | All right reserved. </p>
                       <!-- <div class="pull-right">
                           <ul class="nav nav-pills payments">
-                          	<li><i class="fa fa-cc-visa"></i></li>
+                            <li><i class="fa fa-cc-visa"></i></li>
                               <li><i class="fa fa-cc-mastercard"></i></li>
                               <li><i class="fa fa-cc-amex"></i></li>
                               <li><i class="fa fa-cc-paypal"></i></li>
@@ -492,10 +470,3 @@
               <!--footer-bottom-->
           </footer>
               <!-- end footer -->
-    <!-- ====== Script ====== -->
-    <script>
-    function showmodal()
-          {
-          $("#download").modal("show");
-          }
-   </script>
