--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -392,11 +392,15 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                   </div>
                   <!-- Add files -->
-                  <div class="form-group">
-                    <label for="exampleFormControlFile1">Example file input</label>
-                    <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                  <div class="row">
+                    <div class="col-8" class="form-group">
+                      <label for="exampleFormControlFile1">Example file input</label>
+                      <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                    </div>
+                    <div class="col-4">
+                      <button type="submit" class="btn btn-primary">Submit</button>
                   </div>
-                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
               </form>
             </div>
             <!-- End contact -->
