--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,47 +1,150 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-          <!-- Required meta tags -->
-          <meta charset="utf-8">
-          <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-          <!-- <meta charset="utf-8"/> -->
-          <!-- IE Compatibility Meta -->
-          <meta http-equiv="X-UA-Compatible" content="IE=edge">
-          <!-- First Mobile Meta -->
-          <meta name="viewport" content="width=device-width, initial-scale=1">
-          <title>Crypto Consultz</title>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Crypto-Consultz</title>
+  </head>
+  <body>
+    <div>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#">CryptoConsultz</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          {{#if user}}
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/logout">Logout</a>
+          </li>
+          {{else}}
+          <li class="nav-item">
+            <a class="nav-link" href="/users/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/signup">Sign up</a>
+          </li>
+          {{/if}}
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+  </div>
+       <div>
+          <!-- Example row of columns -->
+          <div class="row">
+            <div class="col-md-6">
+              {{#if success_msg}}
+                      <div class="alert alert-success" role="alert">{{success_msg}}</div>
+              {{/if}}
+              {{#if error_msg}}
+                      <div class="alert alert-danger" role="alert">{{error_msg}}</div>
+              {{/if}}
+              {{#if error}}
+                      <div class="alert alert-danger" role="alert">{{error}}</div>
+              {{/if}}
 
-          <!--CSS files links-->
-          <link rel="stylesheet" href="css/style.css"/>
-          <!--IonIcons-CSS files links-->
-          <link rel="stylesheet" href="css/ionicons.css"/>
-          <!-- Bootstrap -->
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-          <!-- Navbar font -->
-          <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans:300" rel="stylesheet">
-          <!-- Optional theme -->
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
-          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-          <!-- favicon -->
-          <link rel="shortcut icon" href="fevicon.png" type="image/x-icon">
-          <!-- animate.css -->
-          <link rel="stylesheet" href="./css/animate.css">
-          <!-- <link rel="stylesheet" href="animate.min.css"> -->
-    </head>
+              {{{body}}}
 
-    <body>
-    {{{body}}}
+            </div>
+            <hr>
+          </div>
+      </div>
 
-    </body>
-    <!-- particles js -->
-        <script src="js/particles.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.js"
-        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-        crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- ====== footer start here ====== -->
+            <footer>
+              <div class="footer" id="footer">
+                  <div class="container">
+                    <div class="row">
+                      <!-- <div class="row"> -->
+                    <div class="col"><h4> CryptoConsultz, LLC </h4></div>
+                      <div class="col">
+                        <ul class="social">
+                            <li> <a href="#"> <i class="icon ion-social-facebook" id="icon-footer"></i> </i> </a> </li>
+                            <li> <a href="https://twitter.com/?lang=en"> <i class="icon ion-social-twitter" id="icon-footer"></i> </i> </a> </li>
+                            <li> <a href="https://www.instagram.com/coinconsultz/?hl=en"> <i class="icon ion-social-instagram" id="icon-footer"></i> </i> </a> </li>
+                            <li> <a href="#"> <i class="icon ion-social-youtube" id="icon-footer"></i> </i> </a> </li>
+                         </ul>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                          <div class="pnone-icon">
+                              <a> <i class="icon ion-ios-telephone"></i> +1 (360)-601-8800</a>
+                            </div>
+                        </div>
+                      <div class="col">
+                          <a> <i class="ion-android-mail"> cryptoconsultz@protonmail.com</i> </a>
+                          <br>
+                      </div>
+                    <!-- future -->
+                      <div class="col"></div>
+                      <div class="col"></div>
+                    </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-1"></div>
+                        <div class="col-sm-10">
+                              <br>
+                              <p>Information provided through informational consulting sessions is for informational purposes only and should not be considered legal or financial advice.</p>
+                              <p>You should consult with an attorney or other professional to determine what may be best for your individual needs.</p>
+                              <p>CryptoConsultz, LLC does not make any guarantee or other promise as to any results that may be obtained from using this service.</p>
+                              <p>No one should make any investment decision without first consulting his or her own financial advisor and conducting his or her own research and due diligence.</p>
+                              <p>To the maximum extent permitted by law, CryptoConsultz, LLC disclaims any and all liability in the event any information, commentary, analysis, opinions, advice and/or recommendations prove to be inaccurate, incomplete or unreliable, or result in any investment or other losses.</p>
+                              <p>Your use of the information provided or materials is at your own risk.</p>
+                           </div>
+                         </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                      <!--/.row-->
+              </div>
+                  <!--/.container-->
+              </div>
+              <!--/.footer-->
+              <!--footer-bottom-->
+              <div class="footer-bottom">
+                  <div class="container">
+                      <p class="pull-center"> Copyright © CryptoConsultz, LLC 2018 | All right reserved. </p>
+                      <!-- <div class="pull-right">
+                          <ul class="nav nav-pills payments">
+                            <li><i class="fa fa-cc-visa"></i></li>
+                              <li><i class="fa fa-cc-mastercard"></i></li>
+                              <li><i class="fa fa-cc-amex"></i></li>
+                              <li><i class="fa fa-cc-paypal"></i></li>
+                          </ul>
+                      </div>
+                  </div> -->
+              </div>
+              <!--footer-bottom-->
+          </footer>
+              <!-- end footer -->
+    
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
