--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,11 +2,11 @@
 <form  method="post" action="/users/login">
   <div class="form-group">
     <lable>Username</label>
-      <input type="text" class="form-control" placeholder="Username">
+      <input type="text" class="form-control" name="username" placeholder="Username">
     </div>
     <div class="form-group">
       <lable>Password</label>
-        <input type="password" class="form-control" placeholder="password">
+        <input type="password" class="form-control" name="password" placeholder="password">
     </div>
       <button type="submit" class="btn btn-primary">Submit</button>
 </form>
