--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,11 +277,15 @@ font-size: 14px !important;
 	height: auto;
 	padding-bottom: 2%;
 	padding-top: 2%;
+	margin-bottom: 3%;
 	position: relative;
 	width: 100%;
 	color: #fff;
 	font-family: 'Montserrat', sans-serif;
 	font-family: 'Open Sans', sans-serif;
+	position: fixed;
+    left: 0;
+    bottom: 0;
 }
 
 #icon-footer {
@@ -381,13 +385,16 @@ font-size: 14px !important;
 
 /* Bottom Footer */
 .footer-bottom {
-	padding-left: 0;
-	padding-right: 0;
-	margin: 0;
+	width: 100%;
 	background: #dce1e9;
 	border-top: 1px solid #DDDDDD;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	position: fixed;
+    bottom: 0;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center !important;
+    font-family: 'Montserrat', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
 
 .pull-center {
@@ -395,11 +402,8 @@ font-size: 14px !important;
 }
 
 .footer-bottom p.pull-center {
-    font-size: 12px;
-    font-weight: bold;
-    padding-top: 0%;
-    margin-bottom: 0%;
-    text-align: center !important;
-    font-family: 'Montserrat', sans-serif;
-	font-family: 'Open Sans', sans-serif;
+	margin-top: 1%;
+	margin-bottom: 1%;
+	bottom: 0;
+    
 }
