--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,8 @@
     <title>Crypto-Consultz</title>
   </head>
   <body>
+
+    <!-- ====== Login Form start here ====== -->
     <div>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <a class="navbar-brand" href="#">CryptoConsultz</a>
@@ -20,7 +22,7 @@
         <ul class="navbar-nav mr-auto">
           {{#if user}}
           <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/"><span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/users/logout">Logout</a>
@@ -33,14 +35,6 @@
             <a class="nav-link" href="/users/signup">Sign up</a>
           </li>
           {{/if}}
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -69,6 +63,7 @@
             <hr>
           </div>
       </div>
+      <!-- End Login From -->
 
     <!-- ====== footer start here ====== -->
             <footer>
@@ -140,7 +135,7 @@
               <!--footer-bottom-->
           </footer>
               <!-- end footer -->
-    
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
